# llvm-ir-cmake-pipelines-examples

./: .gitmodules  CMakeLists.txt  README.md
bar/: CMakeLists.txt  bar.cpp
dynamically/: CMakeLists.txt
dynamically/baz/: CMakeLists.txt
dynamically/qux/: CMakeLists.txt  qux.cpp
foo/: CMakeLists.txt
statically/: CMakeLists.txt
statically/bar/: CMakeLists.txt
statically/foo/: CMakeLists.txt
